# certdiff

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  report.json
.github/workflows/: ci.yaml
src/certdiff/: cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_utils.py
tests/data/: bad_cert.pem  ca.pem  cert_serial_1111.pem  cert_serial_2222.pem  ok_cert_clone.pem  test_leaf_bad.pem  test_leaf_ok.pem
