[project]
name = "certdiff"
version = "0.2.0"
description = "Compare two X.509 certificates and detect critical differences."
authors = [
    {name = "Fabio Felici", email = "fabio.felici@pagopa.it"},
]
dependencies = [
    "cryptography",
    "rich",
    "click"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
certdiff = "certdiff.cli:main"

[tool.pdm.scripts]
certdiff = "python -m certdiff.cli"
test = "pytest"
lint = "ruff check ."

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[tool.ruff]
lint.select = ["E", "F"]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "--cov=certdiff --cov-report=html --cov-report=term-missing"